Fixing font size to work better on mobile devices

--- a/app/assets/stylesheets/show.css.scss
+++ b/app/assets/stylesheets/show.css.scss
@@ -140,7 +140,7 @@
   cursor: pointer;
   margin: 0px;
   text-shadow: 0px 0px 3px #000;
-  font-size: 17pt;
+  font-size: 14pt;
   padding-bottom: 3px;
   letter-spacing: 1px;
 }
